# beefirst_technical_test

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pyproject.toml.bak  pytest.ini  ruff.toml
app/: logging.py  main.py  settings.py
app/application/: activate_user.py  register_user.py
app/domain/: entities.py  errors.py  services.py
app/domain/ports/: activation_cache.py  email_port.py  outbox_repository.py  unit_of_work.py  user_repository.py
app/infrastructure/db/: migrate.py  outbox_repo.py  pool.py  uow.py  users_repo.py
app/infrastructure/email/: http_smtp_adapter.py
app/infrastructure/http/: client.py
app/presentation/: api.py  dependencies.py
app/schemas/: requests.py  responses.py
docker/api/: Dockerfile
docker/smtp-mock/: Dockerfile  app.py
migrations/: 20251004_0001_init.sql  20251005_1534_outbox.sql  20251006_0925_outbox_retry_fields.sql  20251006_0938_outbox_allow_processing.sql
scripts/: wait-for.sh
tests/: conftest.py  fakes.py
tests/api/: conftest.py  test_users_activate_route.py  test_users_login_me_route.py  test_users_register_route.py
tests/integration/: conftest.py  db_fixtures.py  test_outbox_dispatcher.py  test_postgres_users_repo.py  test_redis_activation_cache.py  test_redis_sessions.py
tests/unit/: test_code_digest.py  test_code_generation.py  test_code_utils.py  test_http_client.py  test_http_smtp_adapter.py  test_password_hashing.py  test_settings.py  test_usecase_activate_user.py  test_usecase_register_user.py  test_user_entity.py
(+9 files in other folders)
