[project]
name = "beefirst-technical-test"
version = "0.1.0"
description = ""
authors = [{ name = "Jeremy Kalvar", email = "jeremykalvar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["fastapi (>=0.118.0,<0.119.0)", "uvicorn[standard] (>=0.37.0,<0.38.0)", "httpx (>=0.27)", "passlib[bcrypt] (>=1.7.4,<2.0.0)", "psycopg[binary,pool] (>=3.2)", "redis (>=5.0)", "pydantic-settings (>=2.4)", "python-json-logger (>=2.0.7)", "email-validator (>=2.1)", "bcrypt (>=3.2,<4.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
ruff = "^0.13.3"

[tool.poetry]
package-mode = false


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["app"]
addopts = ["-q", "--maxfail=1", "--cov=app", "--cov-report=term-missing"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true